--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.100.0
-uvicorn[standard]==0.23.0
+fastapi==0.95.2
+uvicorn==0.22.0
 python-socketio==5.8.0
 python-dotenv==1.0.0
-openai==1.3.5
+openai==0.28.1
 python-multipart==0.0.6
-pydantic==1.10.12
