--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ python-socketio==5.8.0
 python-dotenv==1.0.0
 openai==0.28.1
 python-multipart==0.0.6
-supabase==2.5.1
-httpx==0.24.1
+# Upgrade Supabase + httpx to fix Client.__init__(proxy=...) mismatch on Render
+supabase>=2.7.4
+httpx>=0.27.0
