--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,4 @@ python-multipart==0.0.6
 # Upgrade Supabase + httpx to fix Client.__init__(proxy=...) mismatch on Render
 supabase>=2.7.4
 httpx>=0.27.0
+firebase-admin==6.5.0
