ci(backend): re-enable auto deploy on push (keep manual run)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
         description: "Reason for deployment"
         required: false
         type: string
+  push:
+    branches: [ "main" ]
+    paths:
+      - "backend/**"
 
 jobs:
   trigger-deploy:
